# jobhunter

./: .gitignore  dev_basic  todo.txt
src/backend/: pom.xml
src/backend/reqs/: candidget.http  candidpost.http  city.http  http-client.env.json  (+2 more)
src/frontend/: package.json
src/services/scrapper/: __init__.py  app.py  application.py  data.html  main.py  models.py  pyproject.toml  req  requirements.txt  ruff.toml  scrapper.py  script.py  service.py  utils.py  withlangchain.py
src/services/scrapper/bak/: main.py  scrapor.py  scrapper.py
src/services/scrapper/firecrawler_test/: res001.txt  res002.txt  res003.txt  res004.txt  res005.txt  res006.txt  res007.txt  res008.txt  res009.json
src/services/scrapper/reqs/: reqs.http  test_page.html
src/services/scrapper/scrap/: __init__.py  config.py  models.py  utils.py
src/services/scrapper/scrap/models/: __init__.py  indeed_jobposting.py  jobposting.py  organization.py  place.py  postal_address.py
src/services/scrapper/scrap/route/: scrapper.py
src/services/scrapper/scrap/service/: __init__.py  page_parser.py  page_scrap.py
src/services/scrapper/static/: notes.txt  result.json
src/services/scrapper/test/: scrapped_3.html  scrapped_6.html
src/services/scrapper/test/headers/: scrapped_headers_0.json
src/services/scrapper/test/heads/: scrapped_head_3.html  scrapped_head_6.html
src/services/scrapper/test/reqs/: reqs.http
src/services/scrapper/testing/: app_draft.py  consts.py  hot.py  obs.py
src/services/scrapper/tests/: conftest.py  test_factory.py  test_page_parser.py  test_simple_request.py  urls.toml
(+309 files in other folders)
